src/main/resources/tests/Semantics/good/operationInteger4.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure ExampleProcedure is
X : integer;
begin
   X := 1/2*3+3;
end ExampleProcedure;
