src/main/resources/tests/Semantics/bad/endProcedure.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure AnotherProcedure is
   X : integer := 0;
begin
    X;
end ExampleProcedure; -- Doit générer une erreur de compilation.
